[project]
name = "klannlinkagemujoco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "mujoco>=3.6.0",
]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
